--- a/RUN_WAY/src/main/resources/application.properties
+++ b/RUN_WAY/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.servlet.session.timeout=1800
 
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@132.226.227.113:1521:XE
 spring.datasource.username=JES
 spring.datasource.password=1234
 
