--- a/RUN_WAY/pom.xml
+++ b/RUN_WAY/pom.xml
@@ -82,8 +82,12 @@
 			  <groupId>javax.servlet</groupId>
 			   <artifactId>jstl</artifactId> 
 		</dependency>
-		
-		
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		
 	</dependencies>
 
