--- a/RUN_WAY/src/main/resources/application.properties
+++ b/RUN_WAY/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.servlet.session.timeout=1800
 #spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ai_web
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://db-7a64t.pub-cdb.ntruss.com/runway_db
+spring.datasource.username=runway
+spring.datasource.password=aigobutwe11done@
 
 
 
