--- a/RUN_WAY/src/main/resources/application.properties
+++ b/RUN_WAY/src/main/resources/application.properties
@@ -8,10 +8,10 @@ server.servlet.session.timeout=1800
 #spring.datasource.username=JES
 #spring.datasource.password=1234
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://db-7a64t.pub-cdb.ntruss.com/runway_db 
-#spring.datasource.username=runway
-#spring.datasource.password=aigobutwe11done@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db-7a64t.pub-cdb.ntruss.com/runway_db 
+spring.datasource.username=runway
+spring.datasource.password=aigobutwe11done@
 
 #mybatis.config-location=classpath:mybatis/model/myBatisConfig.xml
 #mybatis.type-aliases-package=my.jes.web.vo
@@ -22,12 +22,7 @@ spring.servlet.multipart.maxRequestSize=10MB
 spring.mvc.view.prefix=/WEB-INF/jsp
 spring.mvc.view.suffix=.jsp
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.datasource.username=test
-#spring.datasource.password=testtest
-
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test
-spring.datasource.hikari.username=test
-spring.datasource.hikari.password=testtest
+#spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test
+#spring.datasource.hikari.username=test
+#spring.datasource.hikari.password=testtest
